--- a/index.html
+++ b/index.html
@@ -39,10 +39,15 @@
                 <input type="text" id="text" placeholder="Enter text...">
             </div>
             <div class="form-control">
-                <label for="amount">
-                    Amount <br> (negative - expense, positive - income)
-                </label>
+                <label for="amount">Amount</label>
                 <input type="number" id="amount" placeholder="Enter amount...">
+            </div>
+            <div class="toggle-container">
+                <p>expense</p>
+                <span class="toggle plus" onclick="toggleSign()" id="toggle">
+                    <span class="toggle-button"></span>
+                </span>
+                <p>income</p>
             </div>
             <button class="btn">Add Transaction</button>
         </form>
